--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   height: 100vh;
-  overflow-y: auto; /* Ensure the body is scrollable */
+  overflow-y: auto;
 }
 
 header {
@@ -21,7 +21,7 @@ header {
 
 #map-container {
   width: 100%;
-  overflow: auto; /* Enable scrolling within the map container */
+  overflow: auto; 
 }
 
 #tooltip-line, #tooltip {
@@ -66,7 +66,7 @@ header {
 
 #map-container2 {
   width: 100%;
-  overflow: auto; /* Enable scrolling within the map container */
+  overflow: auto;
 }
 
 #map2 {
@@ -110,13 +110,13 @@ header {
 }
 
 #bar-chart2 {
-  position: absolute; /* Adjust as needed */
+  position: absolute;
   left: 800;
   opacity: 0;
 }
 
 #bar-chart3 {
-  position: absolute;/* Adjust as needed */
+  position: absolute;
   left: 800;
   opacity: 0;
 }
@@ -124,7 +124,7 @@ header {
 
 
 #bar-chart {
-  position: absolute; /* Adjust as needed */
+  position: absolute; 
   left: 800;
   opacity: 0;
 }
